.collect(Collectors.toList()) to .List