@@ -44,7 +44,6 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 import net.tourbook.Messages;
 import net.tourbook.OtherMessages;
@@ -3738,13 +3737,13 @@ public class RawDataManager {
          final long[] pausedTime_Start = reimportedTourData.getPausedTime_Start();
          if (pausedTime_Start != null && pausedTime_Start.length > 0) {
 
-            final List<Long> listPausedTime_Start = Arrays.stream(pausedTime_Start).boxed().collect(Collectors.toList());
-            final List<Long> listPausedTime_End = Arrays.stream(reimportedTourData.getPausedTime_End()).boxed().collect(Collectors.toList());
+            final List<Long> listPausedTime_Start = Arrays.stream(pausedTime_Start).boxed().toList();
+            final List<Long> listPausedTime_End = Arrays.stream(reimportedTourData.getPausedTime_End()).boxed().toList();
 
             final long[] pausedTime_Data = reimportedTourData.getPausedTime_Data();
             final List<Long> listPausedTime_Data = pausedTime_Data == null
                   ? null
-                  : Arrays.stream(pausedTime_Data).boxed().collect(Collectors.toList());
+                  : Arrays.stream(pausedTime_Data).boxed().toList();
 
             oldTourData.finalizeTour_TimerPauses(
                   listPausedTime_Start,
@@ -4073,7 +4072,7 @@ public class RawDataManager {
       TourDatabase.saveTour_PostSaveActions_Concurrent_2_ForAllTours(
             allSavedTourIds
                   .stream()
-                  .collect(Collectors.toList()));
+                  .toList());
 
       // prevent async error
       Display.getDefault().syncExec(() -> TourManager.fireEvent(TourEventId.CLEAR_DISPLAYED_TOUR, null, null));
